[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/native_ble/native_ble.gdns" type="Script" id=1]
[ext_resource path="res://scripts/main.gd" type="Script" id=2]

[sub_resource type="Theme" id=5]
Button/styles/disabled = null
Button/styles/focus = null
TextEdit/fonts/font = null

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id=6]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 10.0 ]
}

[node name="TerminalBackground" type="Panel" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -104.0
custom_styles/panel = SubResource( 7 )

[node name="Terminal" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -492.0
margin_top = 20.0
margin_right = 492.0
margin_bottom = 485.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 2
theme = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[color=#FF00FF]Welcome to the demo project of GDNativeBLE![/color]
[color=#00FF00]
Use the scan button to see the BLE devices and select the index using the spinning box and click on connect
It is not possible to get the services and characteristics of a server, that's why the two line edits should be filled in manually
Index 0 will attempt a connection using the default server address of the ESP32 node
The first one (on the left) for the service, and the second one (on the right) for the characteristic
If you are using the source in the folder esp32, the service GDNativeBLE is accessible at this address: 6E400001-B5A3-F393-E0A9-E50E24DCCA9E
This service has 3 characteristics:
		- 1 RX in WRITE mode: 6E400002-B5A3-F393-E0A9-E50E24DCCA9E
		- 2 TX in NOTIFY mode: 6E400003-B5A3-F393-E0A9-E50E24DCCA9E
		- 3 TX in READ mode: 6E400004-B5A3-F393-E0A9-E50E24DCCA9E
If you send data to the first one, the rxValueCount value will be incremented, and your data will be sent to the serial @115200 baud
If you subscribe to the second one, every second the value txValue will be incremented and sent
If you read the data on the last one, you will get the rxValueCount value
[/color]"
text = "Welcome to the demo project of GDNativeBLE!

Use the scan button to see the BLE devices and select the index using the spinning box and click on connect
It is not possible to get the services and characteristics of a server, that's why the two line edits should be filled in manually
Index 0 will attempt a connection using the default server address of the ESP32 node
The first one (on the left) for the service, and the second one (on the right) for the characteristic
If you are using the source in the folder esp32, the service GDNativeBLE is accessible at this address: 6E400001-B5A3-F393-E0A9-E50E24DCCA9E
This service has 3 characteristics:
		- 1 RX in WRITE mode: 6E400002-B5A3-F393-E0A9-E50E24DCCA9E
		- 2 TX in NOTIFY mode: 6E400003-B5A3-F393-E0A9-E50E24DCCA9E
		- 3 TX in READ mode: 6E400004-B5A3-F393-E0A9-E50E24DCCA9E
If you send data to the first one, the rxValueCount value will be incremented, and your data will be sent to the serial @115200 baud
If you subscribe to the second one, every second the value txValue will be incremented and sent
If you read the data on the last one, you will get the rxValueCount value
"
scroll_following = true
selection_enabled = true

[node name="Controls" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -268.0
margin_top = -92.0
margin_right = 268.0
margin_bottom = -12.0

[node name="ConnectScan" type="HBoxContainer" parent="Controls"]
margin_right = 536.0
margin_bottom = 24.0
alignment = 1

[node name="DeviceIndex" type="SpinBox" parent="Controls/ConnectScan"]
margin_left = 97.0
margin_right = 171.0
margin_bottom = 24.0

[node name="Connect" type="Button" parent="Controls/ConnectScan"]
margin_left = 175.0
margin_right = 305.0
margin_bottom = 24.0
rect_min_size = Vector2( 130, 0 )
text = "Connect"

[node name="Scan" type="Button" parent="Controls/ConnectScan"]
margin_left = 309.0
margin_right = 439.0
margin_bottom = 24.0
rect_min_size = Vector2( 130, 0 )
text = "Scan"

[node name="Connection" type="HBoxContainer" parent="Controls"]
margin_top = 28.0
margin_right = 536.0
margin_bottom = 52.0

[node name="Service" type="LineEdit" parent="Controls/Connection"]
margin_right = 265.0
margin_bottom = 24.0
rect_min_size = Vector2( 265, 0 )
text = "6E400001-B5A3-F393-E0A9-E50E24DCCA9E"
placeholder_text = "Service"

[node name="Characteristic" type="LineEdit" parent="Controls/Connection"]
margin_left = 269.0
margin_right = 534.0
margin_bottom = 24.0
rect_min_size = Vector2( 265, 0 )
text = "6E400003-B5A3-F393-E0A9-E50E24DCCA9E"
placeholder_text = "Characteristic"

[node name="Interactions" type="HBoxContainer" parent="Controls"]
margin_top = 56.0
margin_right = 536.0
margin_bottom = 80.0

[node name="Notify" type="Button" parent="Controls/Interactions"]
margin_right = 130.0
margin_bottom = 24.0
rect_min_size = Vector2( 130, 0 )
disabled = true
toggle_mode = true
text = "Notify"

[node name="Read" type="Button" parent="Controls/Interactions"]
margin_left = 134.0
margin_right = 264.0
margin_bottom = 24.0
rect_min_size = Vector2( 130, 0 )
disabled = true
text = "Read"

[node name="Send" type="Button" parent="Controls/Interactions"]
margin_left = 268.0
margin_right = 398.0
margin_bottom = 24.0
rect_min_size = Vector2( 130, 0 )
disabled = true
text = "Send"

[node name="Data" type="LineEdit" parent="Controls/Interactions"]
margin_left = 402.0
margin_right = 535.0
margin_bottom = 24.0
rect_min_size = Vector2( 133, 0 )
placeholder_text = "Data to send"

[node name="ESP32" type="Node" parent="."]
script = ExtResource( 1 )

[connection signal="pressed" from="Controls/ConnectScan/Connect" to="." method="_on_Connect_pressed"]
[connection signal="pressed" from="Controls/ConnectScan/Scan" to="." method="_on_Scan_pressed"]
[connection signal="toggled" from="Controls/Interactions/Notify" to="." method="_on_Notify_toggled"]
[connection signal="pressed" from="Controls/Interactions/Read" to="." method="_on_Read_pressed"]
[connection signal="pressed" from="Controls/Interactions/Send" to="." method="_on_Send_pressed"]
[connection signal="data_received" from="ESP32" to="." method="_on_ESP32_data_received"]
[connection signal="device_connected" from="ESP32" to="." method="_on_ESP32_device_connected"]
[connection signal="device_disconnected" from="ESP32" to="." method="_on_ESP32_device_disconnected"]
[connection signal="device_found" from="ESP32" to="." method="_on_ESP32_device_found"]
[connection signal="notified" from="ESP32" to="." method="_on_ESP32_notified"]
[connection signal="scan_started" from="ESP32" to="." method="_on_ESP32_scan_started"]
[connection signal="scan_stopped" from="ESP32" to="." method="_on_ESP32_scan_stopped"]
